Closed
Bug 649477
Opened 15 years ago
Closed 15 years ago
TI: Assertion failure: inContext(), at jscntxt.cpp:114
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Unassigned)
References
Details
Attachments
(1 file)
|
28.08 KB,
text/plain
|
Details |
I get this assert when using Gmail.
Comment 1•15 years ago
|
||
It looks from the stack and pointer values like we are triggering recompilation immediately after having pushed a new, empty stack segment for an ExternalInvoke, which StackSpace::containingSegment doesn't like. This makes containingSegment work in such cases. I don't think calling containingSegment is possible in the TM branch between when the segment gets pushed and the associated invoke frame gets pushed, but this still might want to go on TM.
http://hg.mozilla.org/projects/jaegermonkey/rev/9eafb9ecc76a
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•