[INFER] Don't check newly pushed StackSegments in StackSpace::containingSegment, bug 649477.